# notebook

nb-fake/: Makefile  nb-fake.cabal  stack.yaml
nb-fake/app/: Main.hs
nb-fake/src/: Server.hs
nb-rest/: Makefile  nb-rest.cabal
nb-rest/src/Notebook/: Model.hs  Rest.hs
