name:                nb-fake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nb-fake#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       base >= 4.7 && < 5
                     , nb-rest
                     , servant-server
                     , warp
                     , containers
                     , text
                     , stm
  default-language:    Haskell2010

executable nb-fake-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , nb-fake
  default-language:    Haskell2010

test-suite nb-fake-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nb-fake
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nb-fake
